# Nystagmus

./: .gitignore  EDFACCESSwrapper.py  EDFTrialParsing.py  EDFValidation.py  EyeLinkDataImporterExample.py  LICENSE  Plot testing.py  Plotting.py  README.md  README.txt  appLayout.py  br_message_data.npy  br_recording_data.npy  linearRegression.py  notes.md  nystagmusApp.py  pyproject.toml  requirements.txt  todo.md
EDF-data/: br.edf
EDF_file_importer/: EDF2numpy.py  EyeLinkDataImporter.py
nystagmus_app/: __main__.py  app.py
nystagmus_app/EDF_file_importer/: EDF2numpy.py  EDFValidation.py  EyeLinkDataImporter.py
nystagmus_app/callback_functions/: base_graph.py  calibrated_graph.py  calibration_remapping.py  globals.py  upload_tabs.py
nystagmus_app/layout/: app_components.py  layout_functions.py
nystagmus_app/utils/: regression.py  trial_parsing.py
