[build-system]
requires = ["setuptools>=71.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nystagmus_analyser"
version = "0.1.0"
description = "A tool for calibrating and analyzing nystagmus data."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tom Russell", email = "thomas.a.russell@outlook.com"},#
]
dependencies = [
    "dash==2.17.1",
    "dash_bootstrap_components==1.6.0",
    "numpy==2.1.0",
    "pandas==2.2.2",
    "plotly==5.23.0",
    
]

